# bookshelf-rs

./: .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  justfile  nomad.hcl  package-lock.json  package.json  shell.nix  webpack.config.js
.forgejo/workflows/: build.yml
.github/: dependabot.yml
.github/workflows/: docker-image.yml  docker-publish.yml
migrations/: 001_initial_tables.sql  002_series_tables.sql
public/: App.vue  bookshelf.js  index.ejs  read.ejs  read.js
public/api/openlibrary/: index.js
public/assets/: index.js  manifest.json
public/components/: AddBookForm.vue  BookForm.vue  FileInput.vue  FileList.vue  FileTag.vue  Modal.vue  UploadFileForm.vue
public/components/modals/: EditBook.vue  UploadFile.vue
public/css/: bookshelf.scss  read.scss
public/routes/: index.js
public/stores/books/: index.js
public/stores/files/: index.js
public/stores/filters/: index.js
public/views/: Authors.vue  Home.vue  Read.vue  Series.vue
src/: controllers.rs  main.rs  models.rs
src/controllers/: books.rs  mime.rs  opds.rs  series.rs
src/controllers/books/: authors.rs  book_series.rs  files.rs
src/models/: books.rs  mime.rs
src/models/books/: authors.rs  files.rs  mod.rs  series.rs
