[package]
name = "bookshelf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive", "env"]}
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.12", features = ["multipart"]}
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "migrate" ] }
chrono = { version = "0.4", features = ["serde"] }
futures = {version = "0.3"}
uuid = {version = "1.3.0", features = ["v4"]}
http = {version = "0.2.9"}
aws-config = "0.55.0"
aws-sdk-s3 = "0.25.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
