[package]
name = "bookshelf-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"]}
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.20", features = ["multipart", "macros"]}
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.4", features = ["fs", "trace", "cors", "normalize-path"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "migrate" ] }
chrono = { version = "0.4", features = ["serde"] }
futures = {version = "0.3"}
uuid = {version = "1.6.0", features = ["v4"]}
http = {version = "0.2"}
aws-config = "0.101.0"
aws-sdk-s3 = { version = "0.38.0", features = ["behavior-version-latest"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
